# Cpu8

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: short-circuit-check.yml
LastVersion/: .new_CPU.circ.autosave  .new_CPU_int.circ.autosave  1  CPU.circ  OperationDecoder  general_test  helloworld.txt  jump_implementation_test  new_CPU.circ  new_CPU_int.circ  new_CPU_int_k.circ  ourExample.txt  print  proteus_notworking_simulation.pdsprj
asm_toolchain/: .clang-format  ASM_DOCUMENTATION.md  CMakeLists.txt  DOCUMENTATION.md  Example.S  Example1.S  ExampleALL_Emu.s  asm_cli.cpp  cpu_objdump.cpp  ld_cli.cpp  main.s  sum.inc  test.S
asm_toolchain/cli/: asm_cli.cpp  ld_cli.cpp
asm_toolchain/docs/: ASM_DOCUMENTATION.md  DOCUMENTATION.md  INSTALATION.md  REPORT.md
asm_toolchain/examples/: Example.S  ExampleAll.S  test2.S  test_mini.s
asm_toolchain/examples_asm/: Example.S  ExampleALL_Emu.s  ExampleAll.S  sum.s
asm_toolchain/examples_asm/mul/: main.s  mul.s
asm_toolchain/src/: asm_cli.cpp  asm_cli_oldV1.cpp
asm_toolchain/src/asm/: Assembler.cpp  Assembler.hpp  Directives.cpp  Directives.hpp  EncodeTable.inc.hpp  InstrEncoding.cpp  InstrEncoding.hpp  Parser.cpp  Parser.hpp  Pass1.cpp  Pass1.hpp  Pass2.cpp  Pass2.hpp  RegisterDependent.hpp  SymbolTable.cpp  SymbolTable.hpp
asm_toolchain/src/binary_generator/: ImageWriter.cpp  ImageWriter.hpp
asm_toolchain/src/common/: Util.hpp
asm_toolchain/src/deprecated/: asm_cli_oldV1.cpp
asm_toolchain/src/link/: Linker.cpp  Linker.hpp  RelocResolver.cpp  RelocResolver.hpp  SectionMerger.cpp  SectionMerger.hpp
asm_toolchain/src/obj_gen/: ObjectFormat.hpp  Relocation.hpp  Serializer.hpp
asm_toolchain/src/object_generator/: ObjectFormat.hpp  Relocation.hpp  Serializer.cpp  Serializer.hpp
asm_toolchain/src/tools/: gen_encode_table.py  table.csv  table.txt  table1.0.0.txt  table_hp.txt
assembler_to_binary_converter/: 4bp_asm  Makefile  Sorting.txt  constants.py  general_test.asm  main.cpp  main.py  test.txt
depracated-schematics/accum/: accum.kicad_pcb  accum.kicad_sch
depracated-schematics/alu/: alu.kicad_pro  alu.kicad_sch
depracated-schematics/interface/: interface.kicad_pcb  interface.kicad_pro  interface.kicad_sch
depracated-schematics/main_hub/: main_hub.kicad_pro  main_hub.kicad_sch
depracated-schematics/pointer_hub/: BaseCounter.kicad_sch  pointer_hub.kicad_pcb  pointer_hub.kicad_sch
depracated-schematics/register_file/: register_file.kicad_pro  register_file.kicad_sch
depracated-schematics/register_file_gen2/: register_file_gen2.kicad_pcb  register_file_gen2.kicad_pro  register_file_gen2.kicad_sch  sym-lib-table
emulation/: emulator.py  parser.py  table.csv
emulator/include/: emulator.hpp
emulator/instructions/: table.csv
emulator/src/: emulate.cpp
emulator_c/: CMakeLists.txt
emulator_c/include/: emulator.hpp
emulator_c/src/: emulate.cpp  emulator.cpp  main.cpp
gerbers/alu/: alu_hub-B_Cu.gbr  alu_hub-B_Mask.gbr  alu_hub-B_Paste.gbr  alu_hub-B_Silkscreen.gbr  alu_hub-Edge_Cuts.gbr  alu_hub-F_Cu.gbr  alu_hub-F_Mask.gbr  alu_hub-F_Paste.gbr  alu_hub-F_Silkscreen.gbr  alu_hub-NPTH.drl  alu_hub-PTH.drl  alu_hub-job.gbrjob
gerbers/backplane/: backplane-B_Cu.gbr  backplane-B_Mask.gbr  backplane-B_Paste.gbr  backplane-B_Silkscreen.gbr  backplane-Edge_Cuts.gbr  backplane-F_Cu.gbr  backplane-F_Mask.gbr  backplane-F_Paste.gbr  backplane-F_Silkscreen.gbr  backplane-In1_Cu.gbr  backplane-In2_Cu.gbr  backplane-NPTH.drl  backplane-PTH.drl  backplane-job.gbrjob
gerbers/core_1/: core_1-B_Cu.gbr  core_1-B_Mask.gbr  core_1-B_Paste.gbr  core_1-B_Silkscreen.gbr  core_1-Edge_Cuts.gbr  core_1-F_Cu.gbr  core_1-F_Mask.gbr  core_1-F_Paste.gbr  core_1-F_Silkscreen.gbr  core_1-NPTH.drl  core_1-PTH.drl  core_1-job.gbrjob
gerbers/core_2/: core_2-B_Cu.gbr  core_2-B_Mask.gbr  core_2-B_Paste.gbr  core_2-B_Silkscreen.gbr  core_2-Edge_Cuts.gbr  core_2-F_Cu.gbr  core_2-F_Mask.gbr  core_2-F_Paste.gbr  core_2-F_Silkscreen.gbr  core_2-NPTH.drl  core_2-PTH.drl  core_2-job.gbrjob
gerbers/core_3/: core_3-B_Cu.gbr  core_3-B_Mask.gbr  core_3-B_Paste.gbr  core_3-B_Silkscreen.gbr  core_3-Edge_Cuts.gbr  core_3-F_Cu.gbr  core_3-F_Mask.gbr  core_3-F_Paste.gbr  core_3-F_Silkscreen.gbr  core_3-NPTH.drl  core_3-PTH.drl  core_3-job.gbrjob
gerbers/interface/: interface-B_Cu.gbr  interface-B_Mask.gbr  interface-B_Paste.gbr  interface-B_Silkscreen.gbr  interface-Edge_Cuts.gbr  interface-F_Cu.gbr  interface-F_Mask.gbr  interface-F_Paste.gbr  interface-F_Silkscreen.gbr  interface-NPTH.drl  interface-PTH.drl  interface-job.gbrjob
gerbers/pc/: pc-B_Cu.gbr  pc-B_Mask.gbr  pc-B_Paste.gbr  pc-B_Silkscreen.gbr  pc-Edge_Cuts.gbr  pc-F_Cu.gbr  pc-F_Mask.gbr  pc-F_Paste.gbr  pc-F_Silkscreen.gbr  pc-NPTH.drl  pc-PTH.drl  pc-job.gbrjob
gerbers/register_accum/: register_file_accum-B_Cu.gbr  register_file_accum-B_Mask.gbr  register_file_accum-B_Paste.gbr  register_file_accum-B_Silkscreen.gbr  register_file_accum-Edge_Cuts.gbr  register_file_accum-F_Cu.gbr  register_file_accum-F_Mask.gbr  register_file_accum-F_Paste.gbr  register_file_accum-F_Silkscreen.gbr  register_file_accum-NPTH.drl  register_file_accum-PTH.drl  register_file_accum-job.gbrjob
gerbers/stack/: step_counter-B_Cu.gbr  step_counter-B_Mask.gbr  step_counter-B_Paste.gbr  step_counter-B_Silkscreen.gbr  step_counter-Edge_Cuts.gbr  step_counter-F_Cu.gbr  step_counter-F_Mask.gbr  step_counter-F_Paste.gbr  step_counter-F_Silkscreen.gbr  step_counter-NPTH.drl  step_counter-PTH.drl  step_counter-job.gbrjob
logisim/: dragonfly.circ  main (Copy).circ  main.circ  main2.circ
microcode/: compiler.py  components.py  generate.py
periphery/: .gitignore  debug.ino  interface_1.csv  join.py  log.py  log_luka.py  periphery.ino  write-rom.py
periphery/debug/: debug.ino  debug_port.ino
schematics/: .gitignore  BaseModule.kicad_pro  DOCUMENTATION.md  SAMTEC_PCIE-164-02-F-D-TH-TR.kicad_mod
simulator/: config.py  debugger.py  export.py  loader.py  main.py  motherboard.py  output.vcd  parser.py  pytest.ini  run_tests.py  simulate.py  simulate_vcd.py
(+254 files in other folders)
